0032977: OCC V7.5, V7.6 cannot read STEP color correctly for the root label, but v6.8 can

- color overriding mechanism is implemented for assembles, parts and instances